fix: spacings fiexs - table & downloadable documents

--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -42,7 +42,7 @@
 
 .table {
   margin: auto;
-  margin-top: spacings.$xxLarge;
+  margin-top: spacings.$small;
   border: solid helpers.pxToRem(2) colors.$text;
   border-collapse: separate;
   border-spacing: 0;
